# multi-agent-midi-gen

./: .env.example  .gitignore  README.md  agents.py  bridge.py  groupchat_manager.py  main.py  parsers.py  pyproject.toml
