[project]
name = "multi-agent-midi-gen"
version = "0.1.0"
description = "Multi-agent MIDI composition pipeline - five AI agents collaborate to write MIDI through structured discussion and review"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyautogen>=0.2.0,<0.3.0",
    "openai>=1.0.0",
    "python-dotenv>=1.2.2",
    "music21>=9.0.0",
    "pretty_midi>=0.2.10",
    "mido>=1.3.3",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0,<2.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyfluidsynth>=1.3.4",
]
